refactor: Update app name and dependencies
Renames the application from "Shiksha Setu" to "EVS" and updates various dependencies to their latest stable versions. This includes React, Vite, and related plugins, ensuring better compatibility and performance.

The application icon and title have also been updated to reflect the new name. Additionally, some unused imports in SettingsView.tsx have been removed.

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,18 @@
-
 {
-  "short_name": "Shiksha Setu",
-  "name": "Shiksha Setu - EVS School Management",
+  "short_name": "EVS",
+  "name": "EVS - School Management",
   "icons": [
     {
-      "src": "https://img.icons8.com/fluency/512/school.png",
+      "src": "https://img.icons8.com/fluency/512/environmental-protection.png",
       "type": "image/png",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any maskable"
     },
     {
-      "src": "https://img.icons8.com/fluency/512/school.png",
+      "src": "https://img.icons8.com/fluency/512/environmental-protection.png",
       "type": "image/png",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
     }
   ],
   "start_url": ".",
